--- a/lesson_05/views/index.html
+++ b/lesson_05/views/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>This is Home Page</title>
-	<link rel="stylesheet" type="text/css" href="/public/css/index.css">
+	<!-- <link rel="stylesheet" type="text/css" href="/public/css/index.css"> -->
+	<link rel="stylesheet" type="text/css" href="/public/bootstrap/css/bootstrap.css">
 	<script   src="https://code.jquery.com/jquery-1.12.4.min.js"   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="   crossorigin="anonymous"></script>
 </head>
 <body>
