--- a/lesson_05/views/index.html
+++ b/lesson_05/views/index.html
@@ -4,29 +4,31 @@
 	<meta charset="UTF-8">
 	<title>This is Home Page</title>
 	<link rel="stylesheet" type="text/css" href="/public/css/index.css">
-	<link rel="stylesheet" type="text/css" href="/public/bootstrap/css/bootstrap.css">
 	<!-- <link rel="stylesheet" type="text/css" href="/public/bootstrap/css/bootstrap.min.css"> -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<script   src="https://code.jquery.com/jquery-1.12.4.min.js"   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="   crossorigin="anonymous"></script>
 </head>
 <body>
-	<h1>Khoa hoc NodeJS can ban</h1>
-	<div class="info">Trung tam lap trinh Codeto</div>
-	<div>
-		<input type="button" name="get_users" class="all_users" value="Get All Users">
+	<div class="container">
+		<h1>Khóa học NodeJS Căn bản</h1>
+		<div class="alert alert-success" role="alert">Trung tam lap trinh Codeto</div>
+		<div>
+			<button type="button" name="get_users" class="btn btn-success all_users">Get All Users</button>
+		</div>
+		<table class="table table-striped table-bordered table-hover">
+			<thead>
+				<tr>
+					<td>ID</td>
+					<td>Name</td>
+				</tr>
+			</thead>
+			<tbody>
+			</tbody>
+		</table>
 	</div>
-	<table>
-		<thead>
-			<tr>
-				<td>ID</td>
-				<td>Name</td>
-			</tr>
-		</thead>
-		<tbody>
-		</tbody>
-	</table>
 </body>
 <script type="text/javascript">
-	$("input.all_users").click(function() {
+	$(".all_users").click(function() {
 		$.ajax({
 			url : "http://localhost:3000/api/users",
 			dataType: 'json',
