--- a/lesson_05/views/index.html
+++ b/lesson_05/views/index.html
@@ -10,16 +10,18 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Khóa học NodeJS Căn bản</h1>
+		<h1>NodeJS Course</h1>
 		<div class="alert alert-success" role="alert">Trung tam lap trinh Codeto</div>
 		<div>
-			<button type="button" name="get_users" class="btn btn-success all_users">Get All Users</button>
+			<button type="button" name="get_users" class="btn btn-success all_users">Append</button>
 		</div>
 		<table class="table table-striped table-bordered table-hover">
 			<thead>
 				<tr>
 					<td>ID</td>
 					<td>Name</td>
+					<td>Age</td>
+					<td>Address</td>
 				</tr>
 			</thead>
 			<tbody>
@@ -28,25 +30,52 @@
 	</div>
 </body>
 <script type="text/javascript">
-	$(".all_users").click(function() {
+	$(document).ready(function(){
 		$.ajax({
-			url : "http://localhost:3000/api/users",
-			dataType: 'json',
+			url : "http://localhost:3000/api/user_from_db",
+			dataType : "json",
 			type : "GET",
-		}).success(function(user){
-			if(user == null) {
-				$(".message").html("Error cmnr");
-			} else {
-				var html = "";
-				for(i = 0; i < user.length; i++) {
-					html += "<tr>";
-					html += "<td>" + user[i].id + "</td>";
-					html += "<td>" + user[i].name + "</td>";
-					html += "</tr>";
+		}).success(function(data){
+			if(data == null) {
+					$(".message").html("Error cmnr");
+				} else {
+					var html = "";
+					for(i = 0; i < data.length; i++) {
+						html += "<tr>";
+						html += "<td>" + (i + 1) + "</td>";
+						html += "<td>" + data[i].name + "</td>";
+						html += "<td>" + data[i].age + "</td>";
+						html += "<td>" + data[i].address + "</td>";
+						html += "</tr>";
+					}
+					$("tbody").html(html);
 				}
-				$("tbody").html(html);
-			}
 		});
-    });
+
+		$(".all_users").click(function() {
+			$.ajax({
+				url : "http://localhost:3000/api1/users",
+				dataType: 'json',
+				type : "GET",
+			}).success(function(user){
+				if(user == null) {
+					$(".message").html("Error cmnr");
+				} else {
+					var html = "";
+					for(i = 0; i < user.length; i++) {
+						html += "<tr>";
+						html += "<td>" + user[i].id + "</td>";
+						html += "<td>" + user[i].name + "</td>";
+						html += "<td>" + user[i].age + "</td>";
+						html += "<td>" + user[i].address + "</td>";
+						html += "</tr>";
+					}
+					$("tbody").append(html);
+					$('button').prop('disabled', true);
+				}
+			});
+    	});
+	});
+	
 </script>
 </html>
