--- a/lesson_05/views/index.html
+++ b/lesson_05/views/index.html
@@ -14,6 +14,7 @@
 		<div class="alert alert-success" role="alert">Trung tam lap trinh Codeto</div>
 		<div>
 			<button type="button" name="get_users" class="btn btn-success all_users">Append</button>
+			<a href="http://localhost:3000/addUser"><button type="button" name="get_users" class="btn btn-success all_users">Add New</button></a>
 		</div>
 		<table class="table table-striped table-bordered table-hover">
 			<thead>
