--- a/lession_05/views/index.html
+++ b/lession_05/views/index.html
@@ -4,6 +4,7 @@
 		<meta charset = 'utf-8' />
 		<title>HTML FILE</title>
 		<link rel='stylesheet' type='text/css' href='public/css/main.css' />
+		<link href="http://zolovn.com/public/css/bootstrap.css" rel="stylesheet" type="text/css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	</head>
 	<body>
