--- a/blog/apps/views/test.ejs
+++ b/blog/apps/views/test.ejs
@@ -1,4 +1,20 @@
+
+
+
+
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Codeto Editor v1.0</title>
+    <!-- <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
+</head>
+<body>
+<div class="container">
 <h1>Welcome <%= name %></h1>
+<img src="img/01.gif" alt="">
 <% if(true) { %>
 	<h2>Condition is true</h2>
 <% } %>
@@ -8,4 +24,6 @@
 	<li>This is <%= i %></li>
 <% } %>
 </ul>
-<img src="img/01.gif" alt="">
+</div>
+</body>
+</html>
