--- a/blog/apps/views/signup.ejs
+++ b/blog/apps/views/signup.ejs
@@ -56,7 +56,7 @@
                             <option>Haiti</option>
                         </select>
                     </div>
-                </div> <!-- /.form-group --> -->
+                </div> <!-- /.form-group --> 
                 <!-- <div class="form-group">
                     <label class="control-label col-sm-3">Gender</label>
                     <div class="col-sm-6">
@@ -78,7 +78,7 @@
                             </div>
                         </div>
                     </div>
-                </div> <!-- /.form-group --> -->
+                </div> <!-- /.form-group --> 
                 <!-- <div class="form-group">
                     <label class="control-label col-sm-3">Meal Preference</label>
                     <div class="col-sm-9">
@@ -93,7 +93,7 @@
                             </label>
                         </div>
                     </div>
-                </div> <!-- /.form-group --> -->
+                </div> <!-- /.form-group -->
                <!--  <div class="form-group">
                     <div class="col-sm-9 col-sm-offset-3">
                         <div class="checkbox">
@@ -102,7 +102,7 @@
                             </label>
                         </div>
                     </div>
-                </div> <!-- /.form-group --> -->
+                </div> <!-- /.form-group --> 
                 <div class="form-group">
                     <div class="col-sm-9 col-sm-offset-3">
                         <input type="submit" class="btn btn-primary btn-block">Register
