--- a/blog/apps/views/list_user.ejs
+++ b/blog/apps/views/list_user.ejs
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="bower_libs/bootstrap/dist/css/bootstrap.min.css"> 
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
 	<script type="text/javascript" src="bower_libs/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
@@ -22,6 +23,12 @@
                     <td>Age</td>
                     <td>Address</td>
                 </tr>
+                <% data.forEach(function (item) { %>
+                    <tr>  
+                        <td><%= item.name %></td>  
+                        <td><%= item.email %></td>
+                    </tr>                                   
+                <% }) %>
             </thead>
             <tbody>
             </tbody>
