--- a/blog/apps/views/list_user.ejs
+++ b/blog/apps/views/list_user.ejs
@@ -3,29 +3,31 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" href="bower_libs/bootstrap/dist/css/bootstrap.min.css"> 
+	<link rel="stylesheet" href="/bower_libs/bootstrap/dist/css/bootstrap.min.css"> 
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
-	<script type="text/javascript" src="bower_libs/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/bower_libs/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>NodeJS Course</h1>
+        <h1>NodeJS HeyKorean</h1>
         <div class="alert alert-success" role="alert">Trung tam lap trinh Codeto</div>
         <div>
             <button type="button" name="get_users" class="btn btn-success all_users">Append</button>
-            <a href="http://localhost:3000/addUser"><button type="button" name="get_users" class="btn btn-success all_users">Add New</button></a>
+            <a href="http://localhost:3000/signup"><button type="button" name="get_users" class="btn btn-success all_users">Add New</button></a>
         </div>
         <table class="table table-striped table-bordered table-hover">
             <thead>
                 <tr>
                     <td>ID</td>
-                    <td>Name</td>
-                    <td>Age</td>
-                    <td>Address</td>
+                    <td>Firstname</td>
+                    <td>Lastname</td>
+                    <td>Email</td>
                 </tr>
                 <% data.forEach(function (item) { %>
                     <tr>  
-                        <td><%= item.name %></td>  
+                        <td><%= 1 %></td>  
+                        <td><%= item.firstName %></td>  
+                        <td><%= item.lastName %></td>
                         <td><%= item.email %></td>
                     </tr>                                   
                 <% }) %>
