update delete function

--- a/blog/apps/views/pages/signup.ejs
+++ b/blog/apps/views/pages/signup.ejs
@@ -2,8 +2,10 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="bower_libs/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="/css/hadl.css">
 		<script type="text/javascript" src="bower_libs/jquery/dist/jquery.min.js"></script>
-		<script type="text/javascript" src="bower_libs/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="bower_libs/bootstrap/dist/js/bootstrap.min.js"></script>
+		
 		<style>
 		body { padding-top:30px; }
 .form-control { margin-bottom: 10px; }
@@ -11,11 +13,11 @@
 	</head>
 	<body>
 	<center>
-		<div class="container">
+		<div class="container hadl-sign-up">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4 well well-sm">
                     <legend><a href="http://www.haanhduclinh.com"><i class="glyphicon glyphicon-globe"></i></a> Sign up!</legend>
-                    <form action="/signup" method="post" class="form" role="form">
+                    <form action="/signup" method="post" id="sign-up-form" role="form">
                     <div class="row">
                         <div class="col-xs-6 col-md-6">
                             <input class="form-control" name="firstname" placeholder="First Name" type="text"
@@ -25,9 +27,9 @@
                             <input class="form-control" name="lastname" placeholder="Last Name" type="text" required />
                         </div>
                     </div>
-                    <input class="form-control" name="email" placeholder="Your Email" type="email" />
-                    <input class="form-control" name="remail" placeholder="Re-enter Email" type="email" />
-                    <input class="form-control" name="password" placeholder="New Password" type="password" />
+                    <input class="form-control" name="email" placeholder="Your Email" type="email" required />
+                    <input class="form-control" name="remail" placeholder="Re-enter Email" type="email" required/>
+                    <input class="form-control" name="password" placeholder="New Password" type="password" required/>
 
                     <label class="radio-inline">
                         <input type="radio" name="sex" id="inlineCheckbox1" value="male" />
@@ -40,11 +42,12 @@
                     <br />
                     <br />
                     <button class="btn btn-lg btn-primary btn-block" type="submit">
-                        Sign up</button>
+                    Sign up <span id='notice'></span></button>
                     </form>
                 </div>
             </div>
         </div>
 	</center>
+    <script type="text/javascript" src="/js/admin.js"></script>
 	</body>
 </html>
