--- a/blog/apps/views/list_user.ejs
+++ b/blog/apps/views/list_user.ejs
@@ -12,6 +12,7 @@
         <h1>NodeJS HeyKorean</h1>
         <div class="alert alert-success" role="alert">Trung tam lap trinh Codeto</div>
         <div>
+            <a href="http://localhost:3000/delete"><button type="button" name="get_users" class="btn btn-success all_users">Delete</button></a>
             <a href="http://localhost:3000/signup"><button type="button" name="get_users" class="btn btn-success all_users">Add New</button></a>
         </div>
         <table class="table table-striped table-bordered table-hover">
