--- a/blog/apps/views/signup.ejs
+++ b/blog/apps/views/signup.ejs
@@ -17,9 +17,12 @@
                 <div class="panel-body" >
                     <form id="signupform" class="form-horizontal" role="form" method="POST" action="/signup">
 
-                        <div id="signupalert" style="display:none" class="alert alert-danger">
+                        <div id="signupalert" style="<% if (!data || !data.error){ %>display:none <%}%>" class="alert alert-danger">
                             <p>Error:</p>
-                            <span></span>
+
+                            <% if (data && data.error) {%>
+                            <span> <%= data.error %> </span>
+                            <%}%>
                         </div>
 
 
@@ -53,7 +56,7 @@
                         <div class="form-group">
                             <label for="icode" class="col-md-3 control-label">Re-type</label>
                             <div class="col-md-9">
-                                <input type="password" class="form-control" name="icode" placeholder="Re-type">
+                                <input type="password" class="form-control" name="repassword" placeholder="Re-type">
                             </div>
                         </div>
 
