--- a/blog/apps/views/signin.ejs
+++ b/blog/apps/views/signin.ejs
@@ -2,10 +2,7 @@
 <html>
 <head>
     <title></title>
-    <link rel="stylesheet" type="text/css" href="bower_libs/bootstrap/dist/css/bootstrap.min.css">
-
-    <script type="text/javascript" src="bower_libs/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="bower_libs/bootstrap/dist/js/bootstrap.min.js"></script>
+    <%- include layout/head %>
 </head>
 <body>
     <div class="container">
