--- a/blog/apps/views/signup.ejs
+++ b/blog/apps/views/signup.ejs
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="bower_libs/bootstrap/dist/css/bootstrap.min.css">
-
-    <script type="text/javascript" src="bower_libs/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="bower_libs/bootstrap/dist/js/bootstrap.min.js"></script>
+    <title> SignUp </title>
+    <%- include layout/head %>
 </head>
 <body>
     <div class="container">
