--- a/blog/apps/views/admin/list_user.ejs
+++ b/blog/apps/views/admin/list_user.ejs
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" href="/bower_libs/bootstrap/dist/css/bootstrap.min.css"> 
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
-	<script type="text/javascript" src="/bower_libs/bootstrap/dist/js/bootstrap.min.js"></script>
-</head>
+<% include ../partials/head %>
 <body>
     <div class="container">
         <h1>NodeJS HeyKorean</h1>
-        <div class="alert alert-success" role="alert">Trung tam lap trinh Codeto</div>
+        <div class="alert alert-success" role="alert">HeyKorean - AnPSoft</div>
         <div>
             <a href="http://localhost:3000/admin/deleteUser"><button type="button" name="get_users" class="btn btn-success all_users">Delete</button></a>
             <a href="http://localhost:3000/signup"><button type="button" name="get_users" class="btn btn-success all_users">Add New</button></a>
