--- a/blog/apps/views/backend/pages/admin.ejs
+++ b/blog/apps/views/backend/pages/admin.ejs
@@ -3,12 +3,11 @@
 
 <head>
 
-<% include ../partials/headera %>
+<%- include ../partials/headera %>
 
 </head>
 
     <div id="wrapper">
-
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
@@ -39,8 +38,7 @@
             <!-- /.row -->
             <div class="row">
 
-            <% include ../partials/ficon %>
-
+                <% include ../partials/ficon %>
             </div>
             <!-- /.row -->
             <div class="row">
