--- a/blog/apps/views/backend/partials/rmenu.ejs
+++ b/blog/apps/views/backend/partials/rmenu.ejs
@@ -13,13 +13,13 @@
                 <!-- /input-group -->
             </li>
             <li>
-                <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                <a href="http://localhost:3000/admin"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
             </li>
             <li>
                 <a href="#"><i class="fa fa-sitemap fa-fw"></i> User <span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                     <li>
-                        <a href="admin/user">List User</a>
+                        <a href="http://localhost:3000/admin/user">List User</a>
                     </li>
                     <li>
                         <a href="#">Role<span class="fa arrow"></span></a>
@@ -46,7 +46,7 @@
                 <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Article <span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                     <li>
-                        <a href="panels-wells.html">Post manager</a>
+                        <a href="http://localhost:3000/admin/post/">Post manager</a>
                     </li>
                     <li>
                         <a href="buttons.html">Comment manager</a>
