--- a/blog/apps/views/admin/post/edit.ejs
+++ b/blog/apps/views/admin/post/edit.ejs
@@ -27,21 +27,21 @@
                                 <input type="hidden" name="id" value="<%if(data && data.post._id){%><%=data.post._id%><%}%>">
                                 <div class="form-group">
                                     <label>Title</label>
-                                    <input class="form-control" name="title" type="text" value="<%if (data && data.post.title){ %> <%= data.post.title%>  <%}%>" />
+                                    <input class="form-control" name="title" type="text" value="<%if (data && data.post.title){ %><%= data.post.title%><%}%>" />
                                 </div>
                                 <div class="form-group">
                                     <label>Content</label>
-                                    <input class="form-control" name="content" placeholder="Enter text" value="<%if (data && data.post.content){ %> <%= data.post.content%>  <%}%>">
+                                    <input class="form-control" name="content" placeholder="Enter text" value="<%if (data && data.post.content){ %><%= data.post.content%><%}%>">
                                 </div>
 
                                 <div class="form-group">
                                     <label>Author</label>
-                                    <input class="form-control" name="author" placeholder="Enter text" value="<%if (data && data.post.author){ %> <%= data.post.author%>  <%}%>">
+                                    <input class="form-control" name="author" placeholder="Enter text" value="<%if (data && data.post.author){ %><%= data.post.author%><%}%>">
                                 </div>
 
                                 <div class="form-group">
                                     <label>Categories</label>
-                                    <input class="form-control" name="categories" placeholder="Enter text" value="<%if (data && data.post.categories){ %> <%= data.post.categories %>  <%}%>">
+                                    <input class="form-control" name="categories" placeholder="Enter text" value="<%if (data && data.post.categories){ %><%= data.post.categories %><%}%>">
                                 </div>
 
                                 <span type="btn" class="btn btn-success btn_edit"> Edit </span>
@@ -72,9 +72,8 @@
             data: params,
             dataType: "json",
             success: function(response){
-                // if ( response && response.status == 200){
-                //     location.reload();
-                // }
+                if(response && response.status_code == 200)
+                    location.href = "/admin";
             }
         });
 
