--- a/blog/apps/views/backend/pages/edit.ejs
+++ b/blog/apps/views/backend/pages/edit.ejs
@@ -4,7 +4,8 @@
 <head>
 
 <% include ../partials/headera %>
-
+<script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
+<script>tinymce.init({ selector:'textarea' });</script>
 </head>
 
     <div id="wrapper">
@@ -32,19 +33,19 @@
         <div id="page-wrapper" class='box-hadl'>
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Post Manager</h1>
+                    <h1 class="page-header"><%if (data && data.title){ %> <%=data.title %> <%}%></h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
             <div class="row">
 <!-- begin -->
-<div class="col-lg-6">
+<div class="col-lg-12">
     <div class="panel panel-default">
         <div class="panel-heading">
-            Post Edit
+          <%if (data && data.title){ %> <%=data.title %> <%}%>
         </div>
         <!-- /.panel-heading -->
-    <form method="POST" id='frmpost-hadl'>
+    <form method="POST" id='frmpost-hadl' action="http://localhost:3000/admin/post/new">
         <div class="panel-body">
             <div class="table-responsive">
                 <table class="table">
@@ -55,28 +56,36 @@
                         </tr>
                     </thead>
                     <tbody>
+                        <%if (typeof data.post != "undefined"){ %>
                         <tr>
                             <td>Id</td>
-                            <td><input class='form-control' type='text' name='txtId' value="<%if (data && data.post.title){ %> <%=data.post._id%> <%}%>"></td>
+                            <td><input class='form-control' type='text' name='txtId' value="<%if (typeof data.post != "undefined"){%><%=data.post._id %><%}%>"></td>
                         </tr>
+                        <%}%>
                         <tr>
                             <td>Title</td>
-                            <td><input class='form-control' type='text' name='txtTitle' value="<%if (data && data.post.title){ %> <%=data.post.title%> <%}%>"></td>
+                            <td><input class='form-control' type='text' name='txtTitle' value="<%if (typeof data.post != "undefined"){%><%=data.post.title %><%}%>"></td>
                         </tr>
                         <tr>
                             <td>Author</td>
-                            <td><input class='form-control' type='text' name='txtAuthor' value="<%if (data && data.post.author){ %> <%=data.post.author%> <%}%>"></td>
+                            <td><input class='form-control' type='text' name='txtAuthor' value="<%if (typeof data.post != "undefined"){%><%=data.post.author %><%}%>"></td>
                         </tr>
                         <tr>
                             <td>Content</td>
-                            <td><textarea class='form-control' cols="3" rows="5" name='txtContent' ><%if (data && data.post.Content){ %> <%=data.post.Content%> <%}%></textarea></td>
+                            <td><textarea class='form-control' cols="3" rows="5" name='txtContent' ><%if (typeof data.post != "undefined"){%><%=data.post.Content %><%}%></textarea></td>
                         </tr>
                         <tr>
                             <td>Categories</td>
-                            <td><input class='form-control' type='text' name='txtCategories' value="<%if (data && data.post.category){ %> <%=data.post.category%> <%}%>"></td>
+                            <td><input class='form-control' type='text' name='txtCategories' value="<%if (typeof data.post != "undefined"){%><%=data.post.category %> <%}%>"></td>
                         </tr>
                         <tr>
-                            <td colspan="2"><input class='btn btn-success' type='submit' value="Update"></td>
+                            <td colspan="2">
+                             <% if( data && data.title == 'Add new post') {%>
+                             <input class='btn btn-success' type='submit' value="Submit new post">
+                        <%} else if (data && data.title == 'Edit post' || data.title == 'Update success.' ){%>
+                        <input class='btn btn-success' type='submit' value="Update">
+                        <%}%>
+                        <span id='notification'></span></td>
                         </tr>
                     </tbody>
                 </table>
@@ -97,16 +106,13 @@
     </div>
     <!-- /#wrapper -->
 <% include ../partials/footera %>
-
+<%if (typeof data.post != "undefined" || data.title == 'Update success.'){ %>
 <script type="text/javascript">
     $("#frmpost-hadl").submit(function(e){
         e.preventDefault();
         var base_url = location.protocol + "//" + document.domain + ":" + location.port + "/";
         var url = base_url + "admin/post/edit";
         var data = $(this).serialize();
-
-        console.log(data);
-
         $.ajax({
             url:url,
             data:data,
@@ -114,7 +120,11 @@
             dataType:"JSON",
             success:(function(res){
                 console.log(res);
+                if(res.kq == '1') $('#notification').html("<div class='alert alert-success'><a href='#' class='close' data-dismiss='alert' aria-label='close'>&times;</a><strong>Success!</strong> Update success! </div>");
+                else $('#notification').html("<div class='alert alert-danger'><a href='#' class='close' data-dismiss='alert' aria-label='close'>&times;</a><strong>Danger!</strong> Something wrong</div>");
             })
         });
     });
 </script>
+
+<%}%>
