--- a/blog/public/css/main_home.css
+++ b/blog/public/css/main_home.css
@@ -79,3 +79,44 @@
     text-transform: uppercase !important;
     font-size:16px !important;
   }
+  .main-chat{
+    padding:30px;
+    border: 1px solid #cecece;
+    box-shadow: 1px 1px 1px #cecece;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    width: 97%;
+  }
+  #conversation{
+    border: 1px solid #cecece;
+    border-radius: 2px;
+    padding: 30px;
+    background-color: #e2e2e2;
+  }
+  .scollable-class{
+    margin-bottom: 38px;
+    height: 390px;
+    overflow: hidden;
+    overflow-y: scroll;
+  }
+  #available_id{
+    border: 1px solid #cecece;
+    padding:15px;
+    border-radius: 3px;
+  }
+  #hadl-chat-container {
+    margin: 0 auto;
+    text-align: center; /* for IE */
+  }
+
+  .hadl-chat-panel {
+    width: 400px;
+    position: fixed;
+    z-index: 2;
+    top: 30%;
+    left: 30%;
+  }
+  #available_id{
+    padding: 25px;
+  }
